<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookManualActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Book Name" />

        <EditText
            android:id="@+id/etAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Author" />

        <EditText
            android:id="@+id/etPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Publisher" />

        <EditText
            android:id="@+id/etReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Release Date (YYYY-MM-DD)" />

        <EditText
            android:id="@+id/etLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Language" />

        <EditText
            android:id="@+id/etGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Genres (comma-separated)" />

        <EditText
            android:id="@+id/etISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ISBN" />

        <EditText
            android:id="@+id/etDanacode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Danacode" />

        <EditText
            android:id="@+id/etCoverImageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cover Image URL" />

        <Button
            android:id="@+id/btnAddBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Book" />

    </LinearLayout>
</ScrollView>